trunk/Archive2/68/b4fd147c9624d9/output
main.cpp:11:2: error: #error "NOT SUPPORTED ON GCC >= 4.9"
 #error "NOT SUPPORTED ON GCC >= 4.9"
  ^
